# CTest

./: CMakeLists.txt  a.out
Header/: button.h  colour.h  game.h  init.h  utils.h
Source/: calc.c  game.c  init.c  main.c  utils.c
